feat adding style and pokemon stats

--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokédex</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <ol id="pokeList">
-  </ol>
+  <main class="container">
+    <h1 class="title">Pokédex</h1>
+    <p class="subtitle">Welcome to the Pokédex! Here you can find information about different Pokémon species.</p>
+
+    <ol id="pokeList">
+
+    </ol>
+
+    <button id="btnLoad" type="button">Load more</button>
+  </main>
 
 
-  <button id="btnLoad"> Load More </button>
 
   <script src="Pokemon.js"></script>
   <script src="api.js"></script>
   <script src="app.js"></script>
 </body>
+
+
 
 </html>
